[package]
authors = ["Andy Hartford <andy.hartford@cohealo.com>"]
build = "build.rs"
description = "FFI bindings to libtsm"
homepage = "https://github.com/ajh/tsm-sys"
license = "MIT"
links = "libtsm"
name = "tsm-sys"
readme = "README.md"
repository = "https://github.com/ajh/tsm-sys"
version = "0.1.0"

[build-dependencies]
gcc = "0.3"
glob = "0.2.10"
libc = "0.1"

[dev-dependencies]
regex = "0.1.8"
